# gpmlr

./: .Rbuildignore  .gitignore  .travis.yml  BinaryFiles  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  README.md  cleanup  config.status  configure  configure.ac
R/: RcppExports.R  bald_score.R  gp.R  gpmlr-package.R  set_hyperparameters.R  zzz.R
inst/gpml/cov/: apxSparse.m  apxState.m  covProd.m
inst/gpml/doc/: index.html
inst/gpml/inf/: infKL.m
inst/gpml/mean/: meanNN.m
inst/gpml/prior/: priorClamped.m  priorClampedMulti.m  priorDelta.m  priorDeltaMulti.m  priorEqualMulti.m  priorGauss.m  priorLaplace.m  priorMix.m  priorSameMulti.m  priorSmoothBox1.m  priorT.m
man/: bald_score.Rd  gp.Rd  gpmlr.Rd  set_hyperparameters.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  define-version.h  embedding.cpp  gpml.cpp  gpmlr.h  path.cpp  set-hyperparameters.cpp  type-conversions.cpp
tests/: testthat.R
tests/testthat/: gp_res_complex_ev.rds  gp_res_pred1_ev.rds  gp_res_pred2_ev.rds  gp_res_training_ev.rds  test-embed-gp-exit.R
